[package]
name = "eipscanne_rs"
version = "0.2.0"
edition = "2024"

[dependencies]
bilge = "0.2.0"
binrw = "0.14.1"
hex-test-macros = { version = "0.1.0", path = "hex_test_macros" }
pretty_assertions = "1.4.1"

[dev-dependencies]
# Not actually a dependency of the package, just used for testing the examples
clap = { version = "4.5.27", features = ["derive"] }
tokio = { version = "1.42.0", features = ["full"] }

[features]
default = [] # Comment to enable async support
# default = ["async"]   # UN-Comment to enable async support for testing
async = []
